--- a/www/page1.html
+++ b/www/page1.html
@@ -4,7 +4,7 @@
             <div class="left">
                 <ons-toolbar-button ng-click="app.slidingMenu.toggleMenu()"><ons-icon icon="bars"></ons-icon></ons-toolbar-button>
             </div>
-            <div class="center">Page 1</div>
+            <div class="center">Home Screen</div>
         </ons-toolbar>
 
         <div style="text-align: center">
