--- a/www/menu.html
+++ b/www/menu.html
@@ -15,6 +15,13 @@
             <i class="fa fa-gear fa-lg" style="color: #666"></i>
             &nbsp; Page 2
         </ons-list-item>
+         
+         <ons-list-item
+            modifier="tappable" class="list__item__line-height"
+            onclick="app.slidingMenu.setMainPage('page3.html', {closeMenu: true})">
+            <i class="fa fa-home fa-lg" style="color: #666"></i>
+            &nbsp; Page 3
+        </ons-list-item>
 
     </ons-list>
 
